--- a/templates/restaurantCreate.html.twig
+++ b/templates/restaurantCreate.html.twig
@@ -1,7 +1,4 @@
 {% extends "base.html.twig" %}
 {% block body %}
-{{form_start(form)}}
-{{form_row(form.title)}}
-{{form_row(form.photoFile)}}
-{{form_end(form)}}
+{{form(form)}}
 {% endblock %}
