--- a/templates/listRestaurants.html.twig
+++ b/templates/listRestaurants.html.twig
@@ -1,21 +1,31 @@
 {% extends "base.html.twig" %}
+{% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script>
+$(' #restaurantList').dataTable({
+    "paging": false
+})
+</script>
+{% endblock %}
 {% block body %}
 <div class="container">
   <div class="col-12">
     <div class="row">
-        <div class="col-4">
+        <div class="col-2">
             <a href="{{ path('restaurant_create')}}"><button class="btn-success padded">Add Restaurant</button></a>
-        </div>
-        <table class="table text-center">
+        </div>  
+        <table id="restaurantList" class="table text-center">
         <thead>
             <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Title</th>
-            <th scope="col">Photo</th>
-            <th scope="col">Active tables</th>
-            <th scope="col">Status</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
+            <th data-sortable="false" scope="col">ID</th>
+            <th data-sortable="true" scope="col">Title</th>
+            <th data-sortable="false" scope="col">Photo</th>
+            <th data-sortable="false" scope="col">Active tables</th>
+            <th data-sortable="false"scope="col">Status</th>
+            <th data-sortable="false"scope="col">Edit</th>
+            <th data-sortable="false" scope="col">Delete</th>
             </tr>
         </thead>
         <tbody>
